# AdvFake

./: config.py  main.py  model.ipynb  present.ipynb  pyproject.toml  template_finder.py  train.py  train_facade.py  train_zebra.py
facades/: split_images.py
models/: discriminator.py  generator.py  model.py  p2p.py
scripts/: random_perturb.py
