[tool.poetry]
name = "advfake"
version = "0.1.0"
description = ""
authors = ["Eric Cao <eric7252000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow-gpu = ">=2.2.0,<2.3.0"
torch = "^1.6.0"
torchvision = "^0.7.0"
numpy = "^1.19.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
